# climbing_io_api

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
.github/workflows/: ci-workflow.yaml
api/: Cargo.toml
api/src/: configuration.rs  main.rs  routes.rs
api/src/configuration/: config.rs  ioc.rs
api/src/routes/: v1.rs
api/src/routes/v1/: graphql_routes.rs  status.rs
data_access/: Cargo.toml
data_access/src/: lib.rs  postgres_pool.rs  repositories.rs
data_access/src/repositories/: tags_repository.rs
graphql/: Cargo.toml
graphql/src/: error.rs  lib.rs  schema.rs
graphql/src/schema/: context.rs  models.rs  mutation.rs  query.rs
graphql/src/schema/models/: inputs.rs  payloads.rs
graphql/src/schema/models/inputs/: tag_input.rs
graphql/src/schema/models/payloads/: exercise.rs  exercise_type.rs  repitition_workout.rs  tag.rs  timed_workout.rs  workout.rs
services/: Cargo.toml
services/src/: journal.rs  lib.rs
services/src/journal/: exercise_service.rs  models.rs  service.rs  tag_service.rs  workout_service.rs
services/src/journal/models/: exercise.rs  tag.rs
shared/: Cargo.toml  appSettings.Dev.json  appSettings.Prod.json  appSettings.json  settings.dev.toml  settings.prod.toml  settings.toml
shared/src/: configuration.rs  lib.rs
shared/src/configuration/: config.rs  settings.rs
