[package]
name = "api"
version = "0.1.0"
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2018"

[dependencies]
# server
actix-web = "2"
actix-rt = "1"
juniper = { git = "https://github.com/graphql-rust/juniper" }

# config
log = "0.4"
pretty_env_logger = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
coi = { git = "https://github.com/Nashenas88/coi" }

# local
graphql = { path = "../graphql" }
services = { path = "../services" }
data_access = { path = "../data_access" }
shared = { path = "../shared" }

[features]
default = [ "dev" ]
dev = [ "data_access/dev", "graphql/dev", "services/dev", "shared/dev" ]
prod = [ "data_access/prod", "graphql/prod", "services/prod", "shared/prod" ]