[package]
name = "data_access"
version = "0.1.0"
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2018"

[dependencies]
mobc-postgres = "0.5"
coi = { git = "https://github.com/Nashenas88/coi" }
async-trait = "0.1.24"
serde_tokio_postgres = { git = "https://github.com/githubaccount624/serde_postgres" }
serde = "1.0"
thiserror = "1.0"

[features]
dev = []
prod = []