[package]
name = "graphql"
version = "0.1.0"
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2018"

[dependencies]
juniper = "0.14.2"
coi = { git = "https://github.com/Nashenas88/coi" }

# local
services = { path = "../services" }
shared = { path = "../shared" }


[features]
dev = []
prod = []