[package]
name = "graphql"
version = "0.1.0"
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2018"

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper" }
coi = { git = "https://github.com/Nashenas88/coi" }
futures = "0.3"
log = "0.4"

# local
services = { path = "../services" }
shared = { path = "../shared" }

[features]
dev = []
prod = []