[package]
name = "services"
version = "0.1.0"
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2018"

[dependencies]
coi = { git = "https://github.com/Nashenas88/coi" }
async-trait = "0.1.24"
thiserror = "1.0"

# local
data_access = { path = "../data_access" }

[features]
dev = []
prod = []